chore: added links to each project/profile

--- a/main-page.html
+++ b/main-page.html
@@ -106,30 +106,30 @@
                     </div>
                 </div>
                 <div class="projects-summary">
-                    <div class="individual-projects">
+                    <a href="" class="individual-projects">
                         <img src="./db/keybr-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="keybr"></img>
                         <div class="individual-projects-description">
                             <h4>Typing Game</h4>
                             <p style="color: #cbcbcb;">A game where you complete a set of words. Using HTML, CSS, JS.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                    </div>
-                    <div class="individual-projects">
+                    </a>
+                    <a href="https://adorablehobbit.github.io/icoclaspinas/" class="individual-projects">
                         <img src="./db/icoc-ph.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="icocph"></img>
                         <div class="individual-projects-description">
                             <h4>ICOC PH Website</h4>
                             <p style="color: #cbcbcb;">A mock website of my Church. Using HTML, CSS, JS.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                    </div>
-                    <div class="individual-projects">
+                    </a>
+                    <a href="" class="individual-projects">
                         <img src="./db/python-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="python"></img>
                         <div class="individual-projects-description">
                             <h4>Typing Game</h4>
                             <p style="color: #cbcbcb;">A terminal based game where you complete a set of phrases. A leaderboard with persistence. Using Python.</p>
                         </div>
                         <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                    </div>
+                    </a>
                 </div>
             </div>
         </main>
@@ -143,30 +143,30 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <div class="individual-projects">
+                        <a href="" class="individual-projects">
                             <img src="./db/flutter-img.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="flutter"></img>
                             <div class="individual-projects-description">
                                 <h4>Mobile Development</h4>
                                 <p style="color: #cbcbcb;">Dart, Flutter</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/web-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="web"></img>
                             <div class="individual-projects-description">
                                 <h4>Web Development</h4>
                                 <p style="color: #cbcbcb;">MERN, Figma, Canva</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/assembly-img.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="asssembly"></img>
                             <div class="individual-projects-description">
                                 <h4>Machine-level Programming</h4>
                                 <p style="color: #cbcbcb;">Assembly</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -194,30 +194,30 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <div class="individual-projects">
+                        <a href="" class="individual-projects">
                             <img src="./db/google-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="google"></img>
                             <div class="individual-projects-description">
                                 <h4>Google Workspace</h4>
                                 <p style="color: #cbcbcb;">Drive, Docs, Sheets, Slides (With extension/Plug-in automation)</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/bandlab-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="bandlab"></img>
                             <div class="individual-projects-description">
                                 <h4>Music Production</h4>
                                 <p style="color: #cbcbcb;">Bandlab</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/ai-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="ai"></img>
                             <div class="individual-projects-description">
                                 <h4>Prompt Engineering</h4>
                                 <p style="color: #cbcbcb;">ChatGPT, CursorAI, GeminiAI</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -230,46 +230,46 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <div class="individual-projects">
+                        <a href="" class="individual-projects">
                             <img src="./db/keybr-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="keybr"></img>
                             <div class="individual-projects-description">
                                 <h4>Typing Game</h4>
                                 <p style="color: #cbcbcb;">A game where you complete a set of words. Using HTML, CSS, JS.</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="https://adorablehobbit.github.io/icoclaspinas/" class="individual-projects">
                             <img src="./db/icoc-ph.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="icoc"></img>
                             <div class="individual-projects-description">
                                 <h4>ICOC PH Website</h4>
                                 <p style="color: #cbcbcb;">A mock website of my Church. Using HTML, CSS, JS.</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/python-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="python"></img>
                             <div class="individual-projects-description">
                                 <h4>Typing Game</h4>
                                 <p style="color: #cbcbcb;">A terminal based game where you complete a set of phrases. A leaderboard with persistence. Using Python.</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/cafe-img.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="cafe"></img>
                             <div class="individual-projects-description">
                                 <h4>Online Cafe System</h4>
                                 <p style="color: #cbcbcb;">An online system that simulates a real-life cafe. Using Java.</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/r-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="r"></img>
                             <div class="individual-projects-description">
                                 <h4>Project Mitigation</h4>
                                 <p style="color: #cbcbcb;">A program where you select different projects to see if it is feasible. Using R and Rshiny.</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -282,38 +282,38 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <div class="individual-projects">
+                        <a href="https://uplb.edu.ph/" class="individual-projects">
                             <img src="./db/image-1.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="jericko"></img>
                             <div class="individual-projects-description">
                                 <h4>Student</h4>
                                 <p style="color: #cbcbcb;">BS Computer Science | University of the Philippines Los Baños</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="https://adorablehobbit.github.io/icoclaspinas/" class="individual-projects">
                             <img src="./db/icoc-ph.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="icoc"></img>
                             <div class="individual-projects-description">
                                 <h4>Tech & Music Committee </h4>
                                 <p style="color: #cbcbcb;">ICOC Philippines</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="https://www.acssuplb.org/" class="individual-projects">
                             <img src="./db/acss-img.jpg" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="acss"></img>
                             <div class="individual-projects-description">
                                 <h4>Academic Committee</h4>
                                 <p style="color: #cbcbcb;">ACSS of UPLB</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="https://upsilakbo.wordpress.com/" class="individual-projects">
                             <img src="./db/silakbo-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="silakbo"></img>
                             <div class="individual-projects-description">
                                 <h4>Guitarist</h4>
                                 <p style="color: #cbcbcb;">UP Silakbo</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -326,30 +326,30 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <div class="individual-projects">
+                        <a href="" class="individual-projects">
                             <img src="./db/web-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="web"></img>
                             <div class="individual-projects-description">
                                 <h4>Web Development</h4>
                                 <p style="color: #cbcbcb;">HTML, CSS, JS</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/python-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="python"></img>
                             <div class="individual-projects-description">
                                 <h4>Game Development</h4>
                                 <p style="color: #cbcbcb;">Python, Tkinter</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
-                        <div class="individual-projects">
+                        </a>
+                        <a href="" class="individual-projects">
                             <img src="./db/r-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="r"></img>
                             <div class="individual-projects-description">
                                 <h4>Data Analytics</h4>
                                 <p style="color: #cbcbcb;">R, Python</p>
                             </div>
                             <i class="fa-solid fa-angle-right projects-arrow" style="color: #cbcbcb; margin: 0;"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
