chore: added links to keybr project

--- a/main-page.html
+++ b/main-page.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="projects-summary">
-                    <a href="" class="individual-projects">
+                    <a href="https://adorablehobbit.github.io/keybr-clone/" class="individual-projects">
                         <img src="./db/keybr-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="keybr"></img>
                         <div class="individual-projects-description">
                             <h4>Typing Game</h4>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="projects-container">
                     <div class="projects-summary">
-                        <a href="" class="individual-projects">
+                        <a href="https://adorablehobbit.github.io/keybr-clone/" class="individual-projects">
                             <img src="./db/keybr-img.png" class="circle" style="height: 50px; width: 50px; margin: 10px 0;" alt="keybr"></img>
                             <div class="individual-projects-description">
                                 <h4>Typing Game</h4>
