feat: added browser icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index-style.css">
+    <link rel="icon" type="image/jpeg" href="./db/image-1.jpg">
     <script src="index-script.js"></script>
     <title>Hobbit AI</title>
 </head>
