--- a/main-page.html
+++ b/main-page.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main-style.css">
+    <link rel="icon" type="image/jpeg" href="./db/image-1.jpg">
     <script src="https://kit.fontawesome.com/2bd7bb3d9c.js" crossorigin="anonymous"></script> <!-- Import Fonts -->
     <title>Hobbit AI</title>
 </head>
